--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Assignment Portal</title>
-        <meta name="description" content="Assignment portal for Victor Nmeka in WDD 230: Web Frontend Developmentat Brigham Young University - Idaho">
+        <meta name="description"
+            content="Assignment portal for Victor Nmeka in WDD 230: Web Frontend Developmentat Brigham Young University - Idaho">
         <link rel="stylesheet" href="css/main.css">
         <script type="text/javascript" src="script/script.js" defer></script>
     </head>
