--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
         <title>Assignment Portal</title>
         <meta name="description"
             content="Assignment portal for Victor Nmeka in WDD 230: Web Frontend Developmentat Brigham Young University - Idaho">
-        <link rel="stylesheet" href="css/main.css">
-        <script type="text/javascript" src="script/script.js" defer></script>
+        <link rel="stylesheet" href="styles/main.css">
+        <script type="text/javascript" src="scripts/script.js" defer></script>
     </head>
 
     <body class="content">
