--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
         <title>Assignment Portal</title>
         <meta name="description"
             content="Assignment portal for Victor Nmeka in WDD 230: Web Frontend Developmentat Brigham Young University - Idaho">
-        <link rel="stylesheet" href="styles/normalize.css">
         <link rel="stylesheet" href="styles/main.css">
         <script type="text/javascript" src="scripts/script.js" defer></script>
     </head>
@@ -22,7 +21,7 @@
         <main>
             <h2>WDD 230: Assignment Portal</h2>
             <ul>
-                <li>Lesson 02: <a href="lesson2/design-principles.html">Design  Principles</a></li>
+                <li>Lesson 02: <a href="index.html">Title</a></li>
                 <li>Lesson 03: <a href="index.html">Title</a></li>
                 <li>Lesson 04: <a href="index.html">Title</a></li>
                 <li>Lesson 05: <a href="index.html">Title</a></li>
