--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
         <meta name="description"
             content="Assignment portal for Victor Nmeka in WDD 230: Web Frontend Developmentat Brigham Young University - Idaho">
         <link rel="stylesheet" href="styles/main.css">
-        <script type="text/javascript" src="scripts/script.js" defer></script>
     </head>
 
     <body class="content">
@@ -48,6 +47,7 @@
             <p class="paragraph-2">Last Updated: <span id="date"></span> <span id="time"></span></p>
         </footer>
 
+        <script type="text/javascript" src="scripts/script.js"></script>
     </body>
 
 </html>
