--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <p class="paragraph-2">Last Updated: <span id="date"></span> <span id="time"></span></p>
         </footer>
 
-        <script type="text/javascript" src="scripts/script.js"></script>
+        <script src="scripts/script.js"></script>
     </body>
 
 </html>
