week 1 done week 2 begin

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <title>Assignment Portal</title>
         <meta name="description"
             content="Assignment portal for Victor Nmeka in WDD 230: Web Frontend Developmentat Brigham Young University - Idaho">
+        <link rel="stylesheet" href="styles/normalize.css">
         <link rel="stylesheet" href="styles/main.css">
     </head>
 
