--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -30,7 +30,7 @@
                     <h3>
                         Ryan's Cleaning Service
                     </h3>
-                    <button class="button"><a href="https://www.ryanscleaningservice.com" target="_blank"
+                    <button class="button"><a href="https://m.facebook.com" target="_blank"
                             rel="noopener">Website</a></button>
 
                     <img class="image" src="images/alignment.jpg" alt="Image  of an aligned webpage in mobile view">
@@ -40,9 +40,11 @@
                         edges.
                         The elements can be centered, right-aligned or left-aligned relative to other items in the
                         design.
-                        <br>In this example, we see several items aligned centrally to the webpage, the headings, the
-                        "Cleaning Services" link and also the images are all aligned and have enough white space between
-                        each other.
+                        <br>In this example of a mobile facebook login webpage, we see several items aligned centrally
+                        to the webpage, the heading and logo(facebook), the
+                        the login button, the forotten password link and also the create account button. There are also
+                        enough white space between
+                        each elements.
                     </p>
 
 
@@ -55,7 +57,7 @@
                     <h3>
                         Piggyvest Saving Platform
                     </h3>
-                    <button class="button"><a href="https://www.piggyvest.com/" target="_blank"
+                    <button class="button"><a href="https://piggyvest.com/" target="_blank"
                             rel="noopener">Website</a></button>
 
 
@@ -65,7 +67,8 @@
                         first thing you want a viewer to look at.
                         It is designing a distinct difference between the foreground and background colors in order to
                         enhance readability and user interaction.
-                        <br>In this example, we see the dark blue "create free account" button having a background quite
+                        <br>In this example, we see the black "create free account" button having a background
+                        quite
                         different from the webpage white background color. The constrast exists to persuade users to
                         click on them so they begin interacting with the page immediately.
 
@@ -78,17 +81,19 @@
                     <h2>
                         Visual Hierachy
                     </h2>
-                    <h3>Nokia</h3>
-                    <button class="button"><a href="https://www.nokia.com" target="_blank" rel="noopener">Website</a>
+                    <h3>Samsung</h3>
+                    <button class="button"><a href="https://samsung.com/us" target="_blank" rel="noopener">Website</a>
                     </button>
-                    <img class="image" src="images/visual.jpg" alt-text="Image of a webpage with great visual hierachy">
+                    <img class="image" src="images/Visual-heirachy.jpg"
+                        alt-text="Image of a webpage with great visual hierachy">
                     <p>
                         Visual Hierachy is the principle of systematically arranging webpage elements according to the
                         order of their importance.<br>
                         Visual Hierachy is used to rank elements in the order you want your users to view them.<br>
                         In this example, we first see the brand logo followed by the link to explore their
                         products(phones).<br>
-                        We also see a bold heading advertising their latest products followed by the link to explore
+                        We also see a bold hero image advertising their latest products containing the "Reserve now"
+                        link to explore
                         their newest product and then the image of the product all systematically arranged.
 
                     </p>
