--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -13,7 +13,6 @@
         <link rel="stylesheet" href="styles/medium.css">
         <link rel="stylesheet" href="styles/large.css">
 
-        <script type="text/javascript" src="scripts/scripts.js" defer></script>
     </head>
 
     <body>
@@ -110,6 +109,7 @@
             <p class="paragraph-2">Last Updated: <span id="date"></span> <span id="time"></span></p>
         </footer>
 
+        <script type="text/javascript" src="scripts/scripts.js"></script>
     </body>
 
 </html>
