--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -83,7 +83,7 @@
                     <button class="button"><a href="https://samsung.com/us" target="_blank" rel="noopener">Website</a>
                     </button>
                     <img class="image" src="images/Visual-heirachy.jpg"
-                        alt-text="Image of a webpage with great visual hierachy">
+                        alt="Image of a webpage with great visual hierachy">
                     <p>
                         Visual Hierachy is the principle of systematically arranging webpage elements according to the
                         order of their importance.<br>
