--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -108,7 +108,7 @@
             <p class="paragraph-2">Last Updated: <span id="date"></span> <span id="time"></span></p>
         </footer>
 
-        <script type="text/javascript" src="scripts/scripts.js"></script>
+        <script src="scripts/scripts.js"></script>
     </body>
 
 </html>
