--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -28,8 +28,7 @@
                     <h3>
                         Ryan's Cleaning Service
                     </h3>
-                    <button class="button"><a href="https://m.facebook.com" target="_blank"
-                            rel="noopener">Website</a></button>
+                    <a href="https://m.facebook.com" class="button" target="_blank" rel="noopener">Website</a>
 
                     <img class="image" src="images/alignment.jpg" alt="Image  of an aligned webpage in mobile view">
                     <p>
@@ -55,8 +54,7 @@
                     <h3>
                         Piggyvest Saving Platform
                     </h3>
-                    <button class="button"><a href="https://piggyvest.com/" target="_blank"
-                            rel="noopener">Website</a></button>
+                    <a href="https://piggyvest.com/" class="button" target="_blank" rel="noopener">Website</a>
 
 
                     <img class="image" src="images/contrast.jpg" alt="Image of a webpage with great constrast">
@@ -80,8 +78,8 @@
                         Visual Hierachy
                     </h2>
                     <h3>Samsung</h3>
-                    <button class="button"><a href="https://samsung.com/us" target="_blank" rel="noopener">Website</a>
-                    </button>
+                    <a href="https://samsung.com/us" class="button" target="_blank" rel="noopener">Website</a>
+
                     <img class="image" src="images/Visual-heirachy.jpg"
                         alt="Image of a webpage with great visual hierachy">
                     <p>
