--- a/lesson3/design.html
+++ b/lesson3/design.html
@@ -8,6 +8,7 @@
         <title>Eko Chambers Website Plan</title>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link rel="stylesheet" href="styles/normalize2.css">
         <link href="https://fonts.googleapis.com/css2?family=Cardo&family=Kurale&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="./styles/main.css">
     </head>
