--- a/lesson3/target-audience.html
+++ b/lesson3/target-audience.html
@@ -8,6 +8,7 @@
         <title>Eko Chambers Website Plan</title>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link rel="stylesheet" href="styles/normalize2.css">
         <link href="https://fonts.googleapis.com/css2?family=Cardo&family=Kurale&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="./styles/main.css">
     </head>
@@ -23,14 +24,65 @@
                 </ul>
             </nav>
         </header>
-        <section>
-            <h2>Target Audience</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur vel excepturi fugiat est alias
-                nesciunt magni explicabo minima, eligendi itaque, id dolorum vero adipisci velit maiores illo mollitia
-                numquam sunt!</p>
-        </section>
+        <main>
+            <section>
+                <h2>Target Audience</h2>
+                <p>
+                    Target audiences includes entreprenuers, small businesses looking to grow
+                    their businesses within Lagos state, big corporations looking to patner with small
+                    local businesses. Tourists are also welcome to experience our local market/businesses giving
+                    them(the tourrists) the experience of tourism and our local businesses the exposure it needs.
+                    The Eko Chambers of Commerce will be working with the local and state government officials to ensure
+                    that major state projects are handled by these local business owners and professionals.
+                </p>
+            </section>
+            <section>
+                <h2>persona</h2>
+                <div>
+                    <img src="images/tunde.jpg" alt="An image of tunde">
+                    <figcaption>Tunde Lemon</figcaption>
+                    <p>Tunde Lemon,22 years old, is a Lagos state born and raised entreprenuer looking for
+                        networking opportunities to grow his businesses. Tunde is always looking for learning
+                        opportunities and trainings to increase his knowledge on entreprenuership. </p>
+                </div>
+                <div>
+                    <img src="images/jean pearl.jpg" alt="image of Jean Pearl">
+                    <figcaption>Jean Pearl</figcaption>
+                    <p>Jean Pearl,45 years old, is a fashion designer. She moved to Lagos state 25 years ago.
+                        She loves attending events and activities that encourages locally produced items she uses
+                        this opportunities to promote her locally made fabrics.
+                    </p>
+                </div>
+                <section>
+                    <h2>Scenerios</h2>
+                    <ol>
+                        <li>What are the benefits of being an ECOB member? <br>
+                            We offer discounted world class business trainings to equip our members with contemporary
+                            business knowledge and practices. We also offer the city's biggest networking opportunity.
+                        </li>
+                        <li>What informations can I access on the ECOB website? <br>
+                            You can get access to events dates, discounts, trainings, projects, membership fees.
+                        </li>
+                        <li>Is membership free?<br>
+                            No, our membership cost way less than the value you get in return. This fees are usually
+                            discounted
+                            during our monthly events 😉</li>
+                        <li>Why is the ECOB website important to me as a Tourists <br>
+                            We host monthly events to showcase our culture and businesses. The events are planned for
+                            ahead of
+                            time. Be the first to know about these events via our website and begin making your plans
+                            ahead of time too.</li>
+                        <li>Does this website have an age limit? <br>
+                            No, it does not. Everyone is welcome to use it both young and old. The website is available
+                            to Everyone.</li>
+                    </ol>
+                </section>
+            </section>
+
+
+        </main>
         <footer>
-            <p>©| Victor Nmeka| Nigeria</p>
+            <p>©<span id="year"></span>| Victor Nmeka| Nigeria</p>
             <p>Eko Chambers of commerce </p>
         </footer>
         <script src="scripts/script.js"></script>
