--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -8,6 +8,7 @@
         <title>Eko Chambers Website Plan</title>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link rel="stylesheet" href="styles/normalize2.css">
         <link href="https://fonts.googleapis.com/css2?family=Cardo&family=Kurale&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="./styles/main.css">
     </head>
@@ -30,10 +31,12 @@
             </section>
             <section>
                 <h2>Site Purpose</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur vel excepturi fugiat est alias
-                    nesciunt magni explicabo minima, eligendi itaque, id dolorum vero adipisci velit maiores illo
-                    mollitia
-                    numquam sunt!</p>
+                <p>The purpose of eko city Chambers of commerce website is to provide all
+                    informations on its activities to its members to encourage members community
+                    involvement, grow members businesses, positively impact the Lagos State
+                    economy and grow in membership.These informations include events dates,
+                    trainings,membership discounts, free services, etc.
+                </p>
             </section>
         </main>
 
