--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <h2>WDD 230: Assignment Portal</h2>
             <ul>
                 <li>Lesson 02: <a href="lesson2/design-principles.html">Design Principles Document</a></li>
-                <li>Lesson 03: <a href="lesson3/index.html">Title</a></li>
+                <li>Lesson 03: <a href="lesson3/index.html">Chambers of Commerce</a></li>
                 <li>Lesson 04: <a href="index.html">Title</a></li>
                 <li>Lesson 05: <a href="index.html">Title</a></li>
                 <li>Lesson 05: <a href="index.html">Title</a></li>
