--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -27,7 +27,7 @@
         <main>
             <section>
                 <h1>Domain Name</h1>
-                <h3>www.ecob.com</h3>
+                <h3>www.ecoc.com</h3>
             </section>
             <section>
                 <h2>Site Purpose</h2>
