--- a/chamber/index.html
+++ b/chamber/index.html
@@ -31,7 +31,7 @@
         <!-- HEADER HERE -->
         <header>
             <div class=" header-nav">
-                <img class="logo" src="./images/Eko Chambers of Commerce-logos_transparent.png" alt="Logo for Eko Chambers
+                <img class="logo" src="./images/ecoc.png" alt="Logo for Eko Chambers
                 of Commerce">
                 <div class="company-name">
                     <h2>Eko</h2>
@@ -80,7 +80,7 @@
         <footer>
             <div class="footer1">
                 <div class="footer-logo">
-                    <img src="images/Eko Chambers of Commerce-logos_transparent.png" alt="footer logo">
+                    <img src="images/ecoc.png" alt="footer logo">
                 </div>
                 <div class="footer-name">
                     <h3>Eko Chamber
@@ -102,7 +102,7 @@
                 <p>Victor Nmeka</p>
                 <p>WDD 230 Project</p>
                 <div>
-                    <p>Last Modification: <span id="date"></p></span>
+                    <p>Last Modification: <span id="date"></span></p>
                 </div>
             </div>
         </footer>
