--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
             <ul>
                 <li>Lesson 02: <a href="lesson2/design-principles.html">Design Principles Document</a></li>
                 <li>Lesson 03: <a href="lesson3/index.html">Chambers of Commerce</a></li>
-                <li>Lesson 04: <a href="index.html">Title</a></li>
-                <li>Lesson 05: <a href="index.html">Title</a></li>
+                <li>Lesson 04: <a href="chamber/index.html">Title</a></li>
+                <li>Lesson 05: <a href="bom/bom.html">Title</a></li>
                 <li>Lesson 05: <a href="index.html">Title</a></li>
                 <li>Lesson 06: <a href="index.html">Title</a></li>
                 <li>Lesson 07: <a href="index.html">Title</a></li>
