--- a/chamber/index.html
+++ b/chamber/index.html
@@ -7,6 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
         <title>Eko Chambers of Commerce | Homepage</title>
 
+        <link rel="icon" href="hp-favicon.ico" type="image/x-icon">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Cardo&family=Kurale&display=swap" rel="stylesheet">
@@ -30,6 +31,17 @@
     <body>
         <!-- HEADER HERE -->
         <header>
+
+            <div class="banner">
+                <div class="banner-box">
+                    <div class="banner-text">Come join us for the Chamber Meet-n-Greet every Wednesday at 7:00 p.m.
+                    </div>
+                    <button class="banner-close" type="button">
+                        close
+                    </button>
+                </div>
+            </div>
+
             <div class=" header-nav">
                 <img class="logo" src="./images/ecoc.png" alt="Logo for Eko Chambers
                 of Commerce">
@@ -63,16 +75,47 @@
 
         <!-- CONTENT HERE -->
         <main>
-            <p class="hero">Hero with site name and call to action</p>
-            <p class="event">Event</p>
-            <p class="weather">Weather</p>
-            <p class="news-release">News Release</p>
-            <p class="join">Join</p>
-            <div id="spotlight-section">
-                <p class="spotlight1">Spotlight 1</p>
-                <p class="spotlight2">SpotLight 2</p>
-                <p class="spotlight3">Spotlight 3</p>
-            </div>
+            <section class="hero">
+                <img src="./images/long-corridor-showcase.jpg" alt="A hero image ">
+                <h1>Welcome To Eko </h1>
+                <div class="joinButton"><a href="#">Join The Chamber</a></div>
+            </section>
+            <section class="event">
+                <h2>Ribbon Cutting</h2>
+                <h3>African Fashion House ✂</h3>
+                <p>Join us for the grand opening of the African Fashion House, Thursday at
+                    1:00p.m.<span><a href="#" target="blank"> more
+                            details...</a></span></p>
+            </section>
+            <section class="weather"><img src="images/weaather-img.jpg" alt="weather placeholder"></section>
+            <section class="news-release">
+                <h2>News Release</h2>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ullam eligendi quod consectetur! Fuga
+                    dignissimos dolore fugiat. Deleniti fuga, temporibus dolor dolorem eligendi laudantium magni
+                    explicabo eum quod voluptate, eos iste.</p>
+            </section>
+            <section class="join">
+                <div class="joinButton"><a href="#">Join Us!</a></div>
+                <p>Discover how to join the Eko Chamber of Commerce and how it will benefit your organization! </p>
+
+            </section>
+
+            <section id="spotlight-section">
+                <div class="spotlight1">
+                    <h2>Eko Classic Records</h2>
+                    <a href="#"><img src="./images/record.jpg" alt="image of a Record"></a>
+                </div>
+                <div class="spotlight2">
+                    <h2>Swift Logistix</h2>
+                    <a href="#"><img src="./images/logistix.jpg" alt="Logistix company logo"></a>
+                </div>
+                <div class="spotlight3">
+                    <h2>Tuale</h2>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque culpa quae architecto veniam modi
+                        similique cumque consequuntur ex facere porro harum accusantium sit aliquam, optio praesentium.
+                        Blanditiis iusto inventore obcaecati.</p>
+                </div>
+            </section>
         </main>
 
 
