--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
             <h2>WDD 230: Assignment Portal</h2>
             <ul>
                 <li>Lesson 02: <a href="lesson2/design-principles.html">Design Principles Document</a></li>
-                <li>Lesson 03: <a href="lesson3/index.html">Chambers of Commerce</a></li>
-                <li>Lesson 04: <a href="chamber/index.html">Title</a></li>
+                <li>Lesson 03: <a href="lesson3/index.html">Chambers of Commerce SitePlan</a></li>
+                <li>Lesson 04: <a href="chamber/index.html">Chambers of Commerce Homepage</a></li>
                 <li>Lesson 05: <a href="bom/bom.html">Title</a></li>
                 <li>Lesson 05: <a href="index.html">Title</a></li>
                 <li>Lesson 06: <a href="index.html">Title</a></li>
