--- a/chamber/index.html
+++ b/chamber/index.html
@@ -34,7 +34,7 @@
 
             <div class="banner">
                 <div class="banner-box">
-                    <div class="banner-text">Come join us for the Chamber Meet-n-Greet every Wednesday at 7:00 p.m.
+                    <div class="banner-text">Come join us for the Chamber Meet and Greet every Wednesday at 7:00 p.m.
                     </div>
                     <button class="banner-close" type="button">
                         close
