images  resized for small sceen

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -104,16 +104,16 @@
                 <div class="spotlight1">
                     <h2>Eko Classic Records</h2>
                     <a href="#"><img src="./images/record.jpg" alt="image of a Record"></a>
+                    <P>Lorem ipsum dolor sit amet consectetur adipisicing elit.!</P>
                 </div>
                 <div class="spotlight2">
                     <h2>Swift Logistix</h2>
                     <a href="#"><img src="./images/logistix.jpg" alt="Logistix company logo"></a>
+                    <p>Lorem ipsum dolor sit amet consectetur adi</p>
                 </div>
                 <div class="spotlight3">
                     <h2>Tuale</h2>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque culpa quae architecto veniam modi
-                        similique cumque consequuntur ex facere porro harum accusantium sit aliquam, optio praesentium.
-                        Blanditiis iusto inventore obcaecati.</p>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque culpa quae ar.</p>
                 </div>
             </section>
         </main>
