--- a/chamber/index.html
+++ b/chamber/index.html
@@ -87,18 +87,18 @@
                     1:00p.m.<span><a href="#" target="blank"> more
                             details...</a></span></p>
             </section>
-            <section class="weather"><img src="images/weaather-img.jpg" alt="weather placeholder"></section>
+            <div class="weather"><img src="images/weaather-img.jpg" alt="weather placeholder"></div>
             <section class="news-release">
                 <h2>News Release</h2>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ullam eligendi quod consectetur! Fuga
                     dignissimos dolore fugiat. Deleniti fuga, temporibus dolor dolorem eligendi laudantium magni
                     explicabo eum quod voluptate, eos iste.</p>
             </section>
-            <section class="join">
+            <div class="join">
                 <div class="joinButton"><a href="#">Join Us!</a></div>
                 <p>Discover how to join the Eko Chamber of Commerce and how it will benefit your organization! </p>
 
-            </section>
+            </div>
 
             <section id="spotlight-section">
                 <div class="spotlight1">
