added link to student portal

--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
                 <li>Lesson 02: <a href="lesson2/design-principles.html">Design Principles Document</a></li>
                 <li>Lesson 03: <a href="lesson3/index.html">Chambers of Commerce SitePlan</a></li>
                 <li>Lesson 04: <a href="chamber/index.html">Chambers of Commerce Homepage</a></li>
-                <li>Lesson 05: <a href="bom/bom.html">Title</a></li>
+                <li>Lesson 05: <a href="bom/bom.html">Book of Mormon activity</a></li>
                 <li>Lesson 05: <a href="index.html">Title</a></li>
                 <li>Lesson 06: <a href="index.html">Title</a></li>
+                <li>Lesson 07: <a href="lesson-7/lazyload.html">Lazy Load Activity</a></li>
                 <li>Lesson 07: <a href="index.html">Title</a></li>
-                <li>Lesson 08: <a href="index.html">Title</a></li>
                 <li>Lesson 09: <a href="index.html">Title</a></li>
                 <li>Lesson 10: <a href="index.html">Title</a></li>
                 <li>Lesson 11: <a href="index.html">Title</a></li>
