--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <li>Lesson 05: <a href="bom/bom.html">Book of Mormon activity</a></li>
                 <li>Lesson 05: <a href="index.html">Title</a></li>
                 <li>Lesson 06: <a href="index.html">Title</a></li>
-                <li>Lesson 07: <a href="lesson-7/lazyload.html">Lazy Load Activity</a></li>
+                <li>Lesson 07: <a href="lesson-7/lazyload.html">Lazy Load Activity</a>|<a href=""></a></li>
                 <li>Lesson 07: <a href="index.html">Title</a></li>
                 <li>Lesson 09: <a href="index.html">Title</a></li>
                 <li>Lesson 10: <a href="index.html">Title</a></li>
