--- a/chamber/index.html
+++ b/chamber/index.html
@@ -43,8 +43,8 @@
             </div>
 
             <div class=" header-nav">
-                <img class="logo" src="./images/ecoc.png" alt="Logo for Eko Chambers
-                of Commerce">
+                <a href="index.html"><img class="logo" src="./images/ecoc.png" alt="Logo for Eko Chambers
+                of Commerce"></a>
                 <div class="company-name">
                     <h2>Eko</h2>
                     <p>Chambers of Commerce</p>
@@ -62,7 +62,7 @@
                 <nav>
                     <button id="navigation-button"><span>&#8801;</span><span>x</span></button>
                     <ul id="nav-list">
-                        <li><a href="#">Discover</a></li>
+                        <li><a href="./discover.html">Discover</a></li>
                         <li><a href="#">Directory</a></li>
                         <li><a href="#">Join</a></li>
                         <li><a href="#">Contact</a></li>
